--- a/src/DotNet.MultiMap/DotNet.MultiMap.csproj
+++ b/src/DotNet.MultiMap/DotNet.MultiMap.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   
   <PropertyGroup>
-    <Version>2.0.0</Version>
+    <Version>2.0.1</Version>
     <PackageId>DotNet.MultiMap</PackageId>
-    <Description>Dot Net generic collections multi map extensions</Description>
+    <Description>Dot Net generic collections multi map extensions.</Description>
     <Authors>.NET Foundation</Authors>
     <Company>.NET Foundation</Company>
     <Copyright>Copyright (c) .NET Foundation. All rights reserved.</Copyright>
@@ -11,12 +11,13 @@
     <PackageProjectUrl>https://github.com/Wallsmedia/DotNet.MultiMap</PackageProjectUrl>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/Wallsmedia/DotNet.MultiMap.git</RepositoryUrl>
-    <AssemblyVersion>2.0.0.0</AssemblyVersion>
-    <FileVersion>2.0.0.0</FileVersion>
-    <TargetFrameworks>net462;net452;netcoreapp1.1</TargetFrameworks>
+    <AssemblyVersion>2.0.1.0</AssemblyVersion>
+    <FileVersion>2.0.1.0</FileVersion>
+    <TargetFrameworks>net452;net462;net47;netcoreapp1.1</TargetFrameworks>
     <AssemblyName>DotNet.MultiMap</AssemblyName>
     <RootNamespace>DotNet.MultiMap</RootNamespace>
     <PackageTags>MultiMap MultiMapHashSet MultiMapList</PackageTags>
+    <PackageReleaseNotes>v.2.0.1 add version for net 4.7</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="$(Configuration) == 'Release'">
